--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/W.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Clark Leovison C. Rey, Xavier Paolo Jamito">
+    <link rel="icon" type="image/svg+xml" href="/src/assets/W.png" />
     <title>We're All In Time | WAIT</title>
   </head>
   <body>
